feat: auto client generation on runtine (FBUI)
