# FB_App/src/Application/Common/Models/CurrentUserResponse.cs
@@ -1,0 +1,7 @@
+namespace FB_App.Application.Common.Models;
+
+public record CurrentUserResponse(
+    string UserId,
+    string UserName,
+    string Email,
+    IReadOnlyCollection<string> Roles);
